testing/valid_input/ok19.java
class Main {
    static int hello(int a, int b, int c, int d, int e, int f, int g, int h, int ch, int i, int j, int k) {
        double dd = hello (1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12);
        return 0;
    }
    static void run() {
        while(true) {
            hello(1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12);
        }
    }
}
