testing/invalid_semantic/def/err11.java
class Main {
    static void run() {int a = 4;}
}

class Main {
    static int add() {
        int b;
    }
}
